--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.15.2
 yarn_mappings=1.15.2+build.17
 loader_version=0.12.5
 # Mod Properties
-mod_version=1.0-SNAPSHOT
+mod_version=1.0-SNAPSHOT-NOAPI
 maven_group=com.dariasc
 archives_base_name=lightdump
 # Dependencies
